# openhs

./: .travis.yml  CMakeLists.txt  README.md
include/: library.h
openhs/: BaseTriggerContainer.h  Board.cpp  Board.h  Card.cpp  Card.h  Event.cpp  Event.h  Player.cpp  Player.h  TriggerContainer.cpp  TriggerContainer.h  Zone.cpp  Zone.h
openhs/cards/: Minion.cpp  Spell.cpp  Spell.h
openhs/cards/classic/: ChillwindYeti.cpp  ChillwindYeti.h  TheCoin.cpp  TheCoin.h
openhs/events/: CombinedEvent.cpp  CombinedEvent.h  GainTempManaEvent.cpp  GainTempManaEvent.h  OriginEvent.cpp  OriginEvent.h  OwnedEvent.cpp  OwnedEvent.h  StartTurnPhase.cpp  StartTurnPhase.h
src/: Board.cpp  Board.h  Card.h  Player.cpp  Player.h  Zone.h  library.cpp
src/card/: Card.h  ChillwindYeti.h  Minion.h
src/event/: ChangePlayerEvent.cpp  ChangePlayerEvent.h  CombinedEvent.cpp  CombinedEvent.h  Event.cpp  Event.h  PlayerEvent.cpp  PlayerEvent.h
src/event/mana/: DestroyManaEvent.cpp  DestroyManaEvent.h  GainManaEvent.cpp  GainManaEvent.h  GainPermanentManaEvent.cpp  GainPermanentManaEvent.h  GainTemporaryManaEvent.cpp  GainTemporaryManaEvent.h  RefreshManaEvent.cpp  RefreshManaEvent.h
src/event/phase/: Phase.cpp  Phase.h  StartTurnPhase.cpp  StartTurnPhase.h
src/events/: CombinedEvent.cpp  CombinedEvent.h  Event.h
src/events/mana/: DestroyManaEvent.cpp  DestroyManaEvent.h  GainEmptyMana.cpp  GainEmptyMana.h  GainMana.cpp  GainMana.h  GainManaEvent.cpp  GainManaEvent.h  GainManaOnce.cpp  GainManaOnce.h  GainPermanentMana.cpp  GainPermanentMana.h  GainPermanentManaEvent.cpp  GainPermanentManaEvent.h  GainTemporaryMana.cpp  GainTemporaryMana.h  GainTemporaryManaEvent.cpp  GainTemporaryManaEvent.h  RefreshMana.cpp  RefreshMana.h  RefreshManaEvent.h
src/phase/: Phase.cpp  Phase.h  StartTurnPhase.cpp  StartTurnPhase.h
test/: CMakeLists.txt  TestManaEvents.cpp  TestPhases.cpp  TestPlayerMana.cpp  TestTriggers.cpp  TestZone.cpp  test.cpp  test_mana.cpp
